Доработаны исключения, доработаны репозитории